Source Code/Compiler/y.output
   0  $accept : Program $end

   1  Program : MethodsList
   2          |

   3  MethodsList : Method MethodsList
   4              | Method

   5  $$1 :

   6  Method : Type ID '(' Parameters ')' $$1 Body

   7  $$2 :

   8  Method : Type '[' ']' ID '(' Parameters ')' $$2 Body

   9  Parameters : Formals Type ID
  10             | Formals Type ID '[' ']'
  11             |

  12  Formals : Formals Type ID ','
  13          | Formals Type ID '[' ']' ','
  14          |

  15  Type : INT
  16       | REAL
  17       | CHAR

  18  Body : '{' Declarations Statements '}'

  19  Declarations : DeclarationsList Declaration
  20               |

  21  DeclarationsList : DeclarationsList Declaration
  22                   |

  23  $$3 :

  24  Declaration : Type ID $$3 Variables ';'

  25  $$4 :

  26  Declaration : Type ID '[' INT_CONST ']' $$4 Variables ';'

  27  $$5 :

  28  Declaration : Type ID '=' Expression $$5 Variables ';'

  29  $$6 :

  30  Variables : ',' ID $$6 Variables

  31  $$7 :

  32  Variables : ',' ID '[' INT_CONST ']' $$7 Variables

  33  $$8 :

  34  Variables : ',' ID '=' Expression $$8 Variables
  35            |

  36  Statements : Statements Statement
  37             |

  38  IncDec : Location INCREASE_SIGN
  39         | ArrayName INCREASE_SIGN
  40         | INCREASE_SIGN Location
  41         | INCREASE_SIGN ArrayName
  42         | Location DECREASE_SIGN
  43         | ArrayName DECREASE_SIGN
  44         | DECREASE_SIGN Location
  45         | DECREASE_SIGN ArrayName

  46  ChangeAssignSymbol : PLUS_EQUALS_SIGN
  47                     | MINUS_EQUALS_SIGN
  48                     | TIMES_EQUALS_SIGN
  49                     | DIVIDE_EQUALS_SIGN

  50  SimpleStatement : Assign
  51                  | AssignMultiple
  52                  | IncDec
  53                  | Location ChangeAssignSymbol Expression
  54                  | ArrayName ChangeAssignSymbol Expression
  55                  | BREAK
  56                  | READ Location
  57                  | READ TEXT ',' Location
  58                  | PRINT Message
  59                  | PRINTLN Message

  60  Statement : SimpleStatement ';'
  61            | RETURN Expression ';'
  62            | IF Code1 '(' Expression ')' Statement

  63  $$9 :

  64  Statement : IF Code1 '(' Expression ')' Statement ELSE $$9 Statement

  65  $$10 :

  66  Statement : WHILE $$10 '(' Expression ')' Statement

  67  $$11 :

  68  Statement : REPEAT $$11 Expression TIMES Statement

  69  $$12 :

  70  Statement : FOR $$12 '(' SimpleStatement ';' Expression ';' SimpleStatement ')' Statement
  71            | SimpleStatement UNLESS Expression ';'
  72            | Block
  73            | ';'

  74  Message : Printable MoreMessage

  75  MoreMessage : ',' Printable MoreMessage
  76              |

  77  Printable : TEXT
  78            | Expression

  79  Block : '{' Statements '}'

  80  Assign : Location '=' Expression
  81         | Location '=' Assign
  82         | ArrayName '=' Expression
  83         | ArrayName '=' Assign

  84  AssignMultiple : Location ',' NestedAssign ',' Expression
  85                 | ArrayName ',' NestedAssign ',' Expression

  86  NestedAssign : Location ',' NestedAssign ',' Expression
  87               | ArrayName ',' NestedAssign ',' Expression
  88               | Location '=' Expression
  89               | ArrayName '=' Expression

  90  MethodName : ID

  91  Location : ID

  92  ArrayName : ID '[' Expression ']'

  93  Expression : Expression OR AndExpression
  94             | AndExpression

  95  AndExpression : AndExpression AND RelationExpression
  96                | RelationExpression

  97  RelationExpression : AddExpression RelationOperator AddExpression
  98                     | AddExpression

  99  RelationOperator : IS_LESS_OR_EQUAL
 100                   | '<'
 101                   | '>'
 102                   | IS_GREATER_OR_EQUAL
 103                   | IS_EQUAL
 104                   | IS_NOT_EQUAL

 105  AddExpression : AddExpression AddOperator Term
 106                | Term

 107  AddOperator : '+'
 108              | '-'

 109  Term : Term MultiplyOperator Factor
 110       | Factor
 111       | NOT_SIGN Factor

 112  MultiplyOperator : '*'
 113                   | '/'
 114                   | '%'

 115  Factor : '(' Expression ')'
 116         | Location
 117         | ArrayName
 118         | INT_CONST
 119         | '-' INT_CONST
 120         | REAL_CONST
 121         | '-' REAL_CONST
 122         | TRUE
 123         | FALSE
 124         | CHAR_CONST
 125         | MethodName '(' Actuals ')'
 126         | IncDec

 127  $$13 :

 128  Actuals : $$13 Arguments Expression
 129          |

 130  Arguments : Arguments Expression ','
 131            |

 132  Code1 :

state 0
	$accept : . Program $end  (0)
	Program : .  (2)

	INT  shift 1
	REAL  shift 2
	CHAR  shift 3
	$end  reduce 2

	Program  goto 4
	MethodsList  goto 5
	Method  goto 6
	Type  goto 7


state 1
	Type : INT .  (15)

	.  reduce 15


state 2
	Type : REAL .  (16)

	.  reduce 16


state 3
	Type : CHAR .  (17)

	.  reduce 17


state 4
	$accept : Program . $end  (0)

	$end  accept


state 5
	Program : MethodsList .  (1)

	.  reduce 1


state 6
	MethodsList : Method . MethodsList  (3)
	MethodsList : Method .  (4)

	INT  shift 1
	REAL  shift 2
	CHAR  shift 3
	$end  reduce 4

	MethodsList  goto 8
	Method  goto 6
	Type  goto 7


state 7
	Method : Type . ID '(' Parameters ')' $$1 Body  (6)
	Method : Type . '[' ']' ID '(' Parameters ')' $$2 Body  (8)

	ID  shift 9
	'['  shift 10
	.  error


state 8
	MethodsList : Method MethodsList .  (3)

	.  reduce 3


state 9
	Method : Type ID . '(' Parameters ')' $$1 Body  (6)

	'('  shift 11
	.  error


state 10
	Method : Type '[' . ']' ID '(' Parameters ')' $$2 Body  (8)

	']'  shift 12
	.  error


state 11
	Method : Type ID '(' . Parameters ')' $$1 Body  (6)
	Parameters : .  (11)
	Formals : .  (14)

	INT  reduce 14
	REAL  reduce 14
	CHAR  reduce 14
	')'  reduce 11

	Parameters  goto 13
	Formals  goto 14


state 12
	Method : Type '[' ']' . ID '(' Parameters ')' $$2 Body  (8)

	ID  shift 15
	.  error


state 13
	Method : Type ID '(' Parameters . ')' $$1 Body  (6)

	')'  shift 16
	.  error


state 14
	Parameters : Formals . Type ID  (9)
	Parameters : Formals . Type ID '[' ']'  (10)
	Formals : Formals . Type ID ','  (12)
	Formals : Formals . Type ID '[' ']' ','  (13)

	INT  shift 1
	REAL  shift 2
	CHAR  shift 3
	.  error

	Type  goto 17


state 15
	Method : Type '[' ']' ID . '(' Parameters ')' $$2 Body  (8)

	'('  shift 18
	.  error


state 16
	Method : Type ID '(' Parameters ')' . $$1 Body  (6)
	$$1 : .  (5)

	.  reduce 5

	$$1  goto 19


state 17
	Parameters : Formals Type . ID  (9)
	Parameters : Formals Type . ID '[' ']'  (10)
	Formals : Formals Type . ID ','  (12)
	Formals : Formals Type . ID '[' ']' ','  (13)

	ID  shift 20
	.  error


state 18
	Method : Type '[' ']' ID '(' . Parameters ')' $$2 Body  (8)
	Parameters : .  (11)
	Formals : .  (14)

	INT  reduce 14
	REAL  reduce 14
	CHAR  reduce 14
	')'  reduce 11

	Parameters  goto 21
	Formals  goto 14


state 19
	Method : Type ID '(' Parameters ')' $$1 . Body  (6)

	'{'  shift 22
	.  error

	Body  goto 23


state 20
	Parameters : Formals Type ID .  (9)
	Parameters : Formals Type ID . '[' ']'  (10)
	Formals : Formals Type ID . ','  (12)
	Formals : Formals Type ID . '[' ']' ','  (13)

	','  shift 24
	'['  shift 25
	')'  reduce 9


state 21
	Method : Type '[' ']' ID '(' Parameters . ')' $$2 Body  (8)

	')'  shift 26
	.  error


state 22
	Body : '{' . Declarations Statements '}'  (18)
	Declarations : .  (20)
	DeclarationsList : .  (22)

	IF  reduce 20
	WHILE  reduce 20
	BREAK  reduce 20
	RETURN  reduce 20
	INT  reduce 22
	REAL  reduce 22
	CHAR  reduce 22
	PRINT  reduce 20
	PRINTLN  reduce 20
	READ  reduce 20
	REPEAT  reduce 20
	FOR  reduce 20
	INCREASE_SIGN  reduce 20
	DECREASE_SIGN  reduce 20
	'{'  reduce 20
	'}'  reduce 20
	';'  reduce 20
	ID  reduce 20

	Declarations  goto 27
	DeclarationsList  goto 28


state 23
	Method : Type ID '(' Parameters ')' $$1 Body .  (6)

	.  reduce 6


state 24
	Formals : Formals Type ID ',' .  (12)

	.  reduce 12


state 25
	Parameters : Formals Type ID '[' . ']'  (10)
	Formals : Formals Type ID '[' . ']' ','  (13)

	']'  shift 29
	.  error


state 26
	Method : Type '[' ']' ID '(' Parameters ')' . $$2 Body  (8)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 30


state 27
	Body : '{' Declarations . Statements '}'  (18)
	Statements : .  (37)

	.  reduce 37

	Statements  goto 31


state 28
	Declarations : DeclarationsList . Declaration  (19)
	DeclarationsList : DeclarationsList . Declaration  (21)

	INT  shift 1
	REAL  shift 2
	CHAR  shift 3
	.  error

	Type  goto 32
	Declaration  goto 33


state 29
	Parameters : Formals Type ID '[' ']' .  (10)
	Formals : Formals Type ID '[' ']' . ','  (13)

	','  shift 34
	')'  reduce 10


state 30
	Method : Type '[' ']' ID '(' Parameters ')' $$2 . Body  (8)

	'{'  shift 22
	.  error

	Body  goto 35


state 31
	Body : '{' Declarations Statements . '}'  (18)
	Statements : Statements . Statement  (36)

	IF  shift 36
	WHILE  shift 37
	BREAK  shift 38
	RETURN  shift 39
	PRINT  shift 40
	PRINTLN  shift 41
	READ  shift 42
	REPEAT  shift 43
	FOR  shift 44
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	'{'  shift 47
	'}'  shift 48
	';'  shift 49
	ID  shift 50
	.  error

	Statement  goto 51
	Block  goto 52
	Assign  goto 53
	Location  goto 54
	AssignMultiple  goto 55
	SimpleStatement  goto 56
	IncDec  goto 57
	ArrayName  goto 58


state 32
	Declaration : Type . ID $$3 Variables ';'  (24)
	Declaration : Type . ID '[' INT_CONST ']' $$4 Variables ';'  (26)
	Declaration : Type . ID '=' Expression $$5 Variables ';'  (28)

	ID  shift 59
	.  error


state 33
	Declarations : DeclarationsList Declaration .  (19)
	DeclarationsList : DeclarationsList Declaration .  (21)

	IF  reduce 19
	WHILE  reduce 19
	BREAK  reduce 19
	RETURN  reduce 19
	INT  reduce 21
	REAL  reduce 21
	CHAR  reduce 21
	PRINT  reduce 19
	PRINTLN  reduce 19
	READ  reduce 19
	REPEAT  reduce 19
	FOR  reduce 19
	INCREASE_SIGN  reduce 19
	DECREASE_SIGN  reduce 19
	'{'  reduce 19
	'}'  reduce 19
	';'  reduce 19
	ID  reduce 19


state 34
	Formals : Formals Type ID '[' ']' ',' .  (13)

	.  reduce 13


state 35
	Method : Type '[' ']' ID '(' Parameters ')' $$2 Body .  (8)

	.  reduce 8


state 36
	Statement : IF . Code1 '(' Expression ')' Statement  (62)
	Statement : IF . Code1 '(' Expression ')' Statement ELSE $$9 Statement  (64)
	Code1 : .  (132)

	.  reduce 132

	Code1  goto 60


state 37
	Statement : WHILE . $$10 '(' Expression ')' Statement  (66)
	$$10 : .  (65)

	.  reduce 65

	$$10  goto 61


state 38
	SimpleStatement : BREAK .  (55)

	.  reduce 55


state 39
	Statement : RETURN . Expression ';'  (61)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 73
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 40
	SimpleStatement : PRINT . Message  (58)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	TEXT  shift 81
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 82
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	Message  goto 83
	Printable  goto 84
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 41
	SimpleStatement : PRINTLN . Message  (59)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	TEXT  shift 81
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 82
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	Message  goto 85
	Printable  goto 84
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 42
	SimpleStatement : READ . Location  (56)
	SimpleStatement : READ . TEXT ',' Location  (57)

	TEXT  shift 86
	ID  shift 87
	.  error

	Location  goto 88


state 43
	Statement : REPEAT . $$11 Expression TIMES Statement  (68)
	$$11 : .  (67)

	.  reduce 67

	$$11  goto 89


state 44
	Statement : FOR . $$12 '(' SimpleStatement ';' Expression ';' SimpleStatement ')' Statement  (70)
	$$12 : .  (69)

	.  reduce 69

	$$12  goto 90


state 45
	IncDec : INCREASE_SIGN . Location  (40)
	IncDec : INCREASE_SIGN . ArrayName  (41)

	ID  shift 50
	.  error

	Location  goto 91
	ArrayName  goto 92


state 46
	IncDec : DECREASE_SIGN . Location  (44)
	IncDec : DECREASE_SIGN . ArrayName  (45)

	ID  shift 50
	.  error

	Location  goto 93
	ArrayName  goto 94


state 47
	Block : '{' . Statements '}'  (79)
	Statements : .  (37)

	.  reduce 37

	Statements  goto 95


state 48
	Body : '{' Declarations Statements '}' .  (18)

	.  reduce 18


state 49
	Statement : ';' .  (73)

	.  reduce 73


state 50
	Location : ID .  (91)
	ArrayName : ID . '[' Expression ']'  (92)

	'['  shift 96
	TIMES  reduce 91
	UNLESS  reduce 91
	AND  reduce 91
	OR  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	INCREASE_SIGN  reduce 91
	DECREASE_SIGN  reduce 91
	PLUS_EQUALS_SIGN  reduce 91
	MINUS_EQUALS_SIGN  reduce 91
	TIMES_EQUALS_SIGN  reduce 91
	DIVIDE_EQUALS_SIGN  reduce 91
	IS_EQUAL  reduce 91
	IS_NOT_EQUAL  reduce 91
	IS_LESS_OR_EQUAL  reduce 91
	IS_GREATER_OR_EQUAL  reduce 91
	'='  reduce 91
	')'  reduce 91
	','  reduce 91
	';'  reduce 91
	']'  reduce 91
	'<'  reduce 91
	'>'  reduce 91
	'%'  reduce 91


state 51
	Statements : Statements Statement .  (36)

	.  reduce 36


state 52
	Statement : Block .  (72)

	.  reduce 72


state 53
	SimpleStatement : Assign .  (50)

	.  reduce 50


state 54
	IncDec : Location . INCREASE_SIGN  (38)
	IncDec : Location . DECREASE_SIGN  (42)
	SimpleStatement : Location . ChangeAssignSymbol Expression  (53)
	Assign : Location . '=' Expression  (80)
	Assign : Location . '=' Assign  (81)
	AssignMultiple : Location . ',' NestedAssign ',' Expression  (84)

	INCREASE_SIGN  shift 97
	DECREASE_SIGN  shift 98
	PLUS_EQUALS_SIGN  shift 99
	MINUS_EQUALS_SIGN  shift 100
	TIMES_EQUALS_SIGN  shift 101
	DIVIDE_EQUALS_SIGN  shift 102
	'='  shift 103
	','  shift 104
	.  error

	ChangeAssignSymbol  goto 105


state 55
	SimpleStatement : AssignMultiple .  (51)

	.  reduce 51


state 56
	Statement : SimpleStatement . ';'  (60)
	Statement : SimpleStatement . UNLESS Expression ';'  (71)

	UNLESS  shift 106
	';'  shift 107
	.  error


state 57
	SimpleStatement : IncDec .  (52)

	.  reduce 52


state 58
	IncDec : ArrayName . INCREASE_SIGN  (39)
	IncDec : ArrayName . DECREASE_SIGN  (43)
	SimpleStatement : ArrayName . ChangeAssignSymbol Expression  (54)
	Assign : ArrayName . '=' Expression  (82)
	Assign : ArrayName . '=' Assign  (83)
	AssignMultiple : ArrayName . ',' NestedAssign ',' Expression  (85)

	INCREASE_SIGN  shift 108
	DECREASE_SIGN  shift 109
	PLUS_EQUALS_SIGN  shift 99
	MINUS_EQUALS_SIGN  shift 100
	TIMES_EQUALS_SIGN  shift 101
	DIVIDE_EQUALS_SIGN  shift 102
	'='  shift 110
	','  shift 111
	.  error

	ChangeAssignSymbol  goto 112


state 59
	Declaration : Type ID . $$3 Variables ';'  (24)
	Declaration : Type ID . '[' INT_CONST ']' $$4 Variables ';'  (26)
	Declaration : Type ID . '=' Expression $$5 Variables ';'  (28)
	$$3 : .  (23)

	'='  shift 113
	'['  shift 114
	','  reduce 23
	';'  reduce 23

	$$3  goto 115


state 60
	Statement : IF Code1 . '(' Expression ')' Statement  (62)
	Statement : IF Code1 . '(' Expression ')' Statement ELSE $$9 Statement  (64)

	'('  shift 116
	.  error


state 61
	Statement : WHILE $$10 . '(' Expression ')' Statement  (66)

	'('  shift 117
	.  error


state 62
	Factor : TRUE .  (122)

	.  reduce 122


state 63
	Factor : FALSE .  (123)

	.  reduce 123


state 64
	Factor : INT_CONST .  (118)

	.  reduce 118


state 65
	Factor : REAL_CONST .  (120)

	.  reduce 120


state 66
	Factor : CHAR_CONST .  (124)

	.  reduce 124


state 67
	Factor : '-' . INT_CONST  (119)
	Factor : '-' . REAL_CONST  (121)

	INT_CONST  shift 118
	REAL_CONST  shift 119
	.  error


state 68
	Term : NOT_SIGN . Factor  (111)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Factor  goto 120
	IncDec  goto 77
	ArrayName  goto 80


state 69
	Factor : '(' . Expression ')'  (115)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 121
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 70
	MethodName : ID .  (90)
	Location : ID .  (91)
	ArrayName : ID . '[' Expression ']'  (92)

	'['  shift 96
	TIMES  reduce 91
	UNLESS  reduce 91
	AND  reduce 91
	OR  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	INCREASE_SIGN  reduce 91
	DECREASE_SIGN  reduce 91
	IS_EQUAL  reduce 91
	IS_NOT_EQUAL  reduce 91
	IS_LESS_OR_EQUAL  reduce 91
	IS_GREATER_OR_EQUAL  reduce 91
	'='  reduce 91
	'('  reduce 90
	')'  reduce 91
	','  reduce 91
	';'  reduce 91
	']'  reduce 91
	'<'  reduce 91
	'>'  reduce 91
	'%'  reduce 91


state 71
	Factor : MethodName . '(' Actuals ')'  (125)

	'('  shift 122
	.  error


state 72
	IncDec : Location . INCREASE_SIGN  (38)
	IncDec : Location . DECREASE_SIGN  (42)
	Factor : Location .  (116)

	INCREASE_SIGN  shift 97
	DECREASE_SIGN  shift 98
	TIMES  reduce 116
	UNLESS  reduce 116
	AND  reduce 116
	OR  reduce 116
	'*'  reduce 116
	'/'  reduce 116
	'+'  reduce 116
	'-'  reduce 116
	IS_EQUAL  reduce 116
	IS_NOT_EQUAL  reduce 116
	IS_LESS_OR_EQUAL  reduce 116
	IS_GREATER_OR_EQUAL  reduce 116
	')'  reduce 116
	','  reduce 116
	';'  reduce 116
	']'  reduce 116
	'<'  reduce 116
	'>'  reduce 116
	'%'  reduce 116


state 73
	Statement : RETURN Expression . ';'  (61)
	Expression : Expression . OR AndExpression  (93)

	OR  shift 123
	';'  shift 124
	.  error


state 74
	RelationExpression : AddExpression . RelationOperator AddExpression  (97)
	RelationExpression : AddExpression .  (98)
	AddExpression : AddExpression . AddOperator Term  (105)

	'+'  shift 125
	'-'  shift 126
	IS_EQUAL  shift 127
	IS_NOT_EQUAL  shift 128
	IS_LESS_OR_EQUAL  shift 129
	IS_GREATER_OR_EQUAL  shift 130
	'<'  shift 131
	'>'  shift 132
	TIMES  reduce 98
	UNLESS  reduce 98
	AND  reduce 98
	OR  reduce 98
	')'  reduce 98
	','  reduce 98
	';'  reduce 98
	']'  reduce 98

	RelationOperator  goto 133
	AddOperator  goto 134


state 75
	AddExpression : Term .  (106)
	Term : Term . MultiplyOperator Factor  (109)

	'*'  shift 135
	'/'  shift 136
	'%'  shift 137
	TIMES  reduce 106
	UNLESS  reduce 106
	AND  reduce 106
	OR  reduce 106
	'+'  reduce 106
	'-'  reduce 106
	IS_EQUAL  reduce 106
	IS_NOT_EQUAL  reduce 106
	IS_LESS_OR_EQUAL  reduce 106
	IS_GREATER_OR_EQUAL  reduce 106
	')'  reduce 106
	','  reduce 106
	';'  reduce 106
	']'  reduce 106
	'<'  reduce 106
	'>'  reduce 106

	MultiplyOperator  goto 138


state 76
	Term : Factor .  (110)

	.  reduce 110


state 77
	Factor : IncDec .  (126)

	.  reduce 126


state 78
	AndExpression : RelationExpression .  (96)

	.  reduce 96


state 79
	Expression : AndExpression .  (94)
	AndExpression : AndExpression . AND RelationExpression  (95)

	AND  shift 139
	TIMES  reduce 94
	UNLESS  reduce 94
	OR  reduce 94
	')'  reduce 94
	','  reduce 94
	';'  reduce 94
	']'  reduce 94


state 80
	IncDec : ArrayName . INCREASE_SIGN  (39)
	IncDec : ArrayName . DECREASE_SIGN  (43)
	Factor : ArrayName .  (117)

	INCREASE_SIGN  shift 108
	DECREASE_SIGN  shift 109
	TIMES  reduce 117
	UNLESS  reduce 117
	AND  reduce 117
	OR  reduce 117
	'*'  reduce 117
	'/'  reduce 117
	'+'  reduce 117
	'-'  reduce 117
	IS_EQUAL  reduce 117
	IS_NOT_EQUAL  reduce 117
	IS_LESS_OR_EQUAL  reduce 117
	IS_GREATER_OR_EQUAL  reduce 117
	')'  reduce 117
	','  reduce 117
	';'  reduce 117
	']'  reduce 117
	'<'  reduce 117
	'>'  reduce 117
	'%'  reduce 117


state 81
	Printable : TEXT .  (77)

	.  reduce 77


state 82
	Printable : Expression .  (78)
	Expression : Expression . OR AndExpression  (93)

	OR  shift 123
	UNLESS  reduce 78
	')'  reduce 78
	','  reduce 78
	';'  reduce 78


state 83
	SimpleStatement : PRINT Message .  (58)

	.  reduce 58


state 84
	Message : Printable . MoreMessage  (74)
	MoreMessage : .  (76)

	','  shift 140
	UNLESS  reduce 76
	')'  reduce 76
	';'  reduce 76

	MoreMessage  goto 141


state 85
	SimpleStatement : PRINTLN Message .  (59)

	.  reduce 59


state 86
	SimpleStatement : READ TEXT . ',' Location  (57)

	','  shift 142
	.  error


state 87
	Location : ID .  (91)

	.  reduce 91


state 88
	SimpleStatement : READ Location .  (56)

	.  reduce 56


state 89
	Statement : REPEAT $$11 . Expression TIMES Statement  (68)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 143
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 90
	Statement : FOR $$12 . '(' SimpleStatement ';' Expression ';' SimpleStatement ')' Statement  (70)

	'('  shift 144
	.  error


state 91
	IncDec : INCREASE_SIGN Location .  (40)

	.  reduce 40


state 92
	IncDec : INCREASE_SIGN ArrayName .  (41)

	.  reduce 41


state 93
	IncDec : DECREASE_SIGN Location .  (44)

	.  reduce 44


state 94
	IncDec : DECREASE_SIGN ArrayName .  (45)

	.  reduce 45


state 95
	Statements : Statements . Statement  (36)
	Block : '{' Statements . '}'  (79)

	IF  shift 36
	WHILE  shift 37
	BREAK  shift 38
	RETURN  shift 39
	PRINT  shift 40
	PRINTLN  shift 41
	READ  shift 42
	REPEAT  shift 43
	FOR  shift 44
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	'{'  shift 47
	'}'  shift 145
	';'  shift 49
	ID  shift 50
	.  error

	Statement  goto 51
	Block  goto 52
	Assign  goto 53
	Location  goto 54
	AssignMultiple  goto 55
	SimpleStatement  goto 56
	IncDec  goto 57
	ArrayName  goto 58


state 96
	ArrayName : ID '[' . Expression ']'  (92)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 146
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 97
	IncDec : Location INCREASE_SIGN .  (38)

	.  reduce 38


state 98
	IncDec : Location DECREASE_SIGN .  (42)

	.  reduce 42


state 99
	ChangeAssignSymbol : PLUS_EQUALS_SIGN .  (46)

	.  reduce 46


state 100
	ChangeAssignSymbol : MINUS_EQUALS_SIGN .  (47)

	.  reduce 47


state 101
	ChangeAssignSymbol : TIMES_EQUALS_SIGN .  (48)

	.  reduce 48


state 102
	ChangeAssignSymbol : DIVIDE_EQUALS_SIGN .  (49)

	.  reduce 49


state 103
	Assign : Location '=' . Expression  (80)
	Assign : Location '=' . Assign  (81)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	Assign  goto 147
	MethodName  goto 71
	Location  goto 148
	Expression  goto 149
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 150


state 104
	AssignMultiple : Location ',' . NestedAssign ',' Expression  (84)

	ID  shift 50
	.  error

	Location  goto 151
	NestedAssign  goto 152
	ArrayName  goto 153


state 105
	SimpleStatement : Location ChangeAssignSymbol . Expression  (53)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 154
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 106
	Statement : SimpleStatement UNLESS . Expression ';'  (71)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	MethodName  goto 71
	Location  goto 72
	Expression  goto 155
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 80


state 107
	Statement : SimpleStatement ';' .  (60)

	.  reduce 60


state 108
	IncDec : ArrayName INCREASE_SIGN .  (39)

	.  reduce 39


state 109
	IncDec : ArrayName DECREASE_SIGN .  (43)

	.  reduce 43


state 110
	Assign : ArrayName '=' . Expression  (82)
	Assign : ArrayName '=' . Assign  (83)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error

	Assign  goto 156
	MethodName  goto 71
	Location  goto 148
	Expression  goto 157
	AddExpression  goto 74
	Term  goto 75
	Factor  goto 76
	IncDec  goto 77
	RelationExpression  goto 78
	AndExpression  goto 79
	ArrayName  goto 150


state 111
	AssignMultiple : ArrayName ',' . NestedAssign ',' Expression  (85)

	ID  shift 50
	.  error

	Location  goto 151
	NestedAssign  goto 158
	ArrayName  goto 153


state 112
	SimpleStatement : ArrayName ChangeAssignSymbol . Expression  (54)

	TRUE  shift 62
	FALSE  shift 63
	INT_CONST  shift 64
	REAL_CONST  shift 65
	CHAR_CONST  shift 66
	'-'  shift 67
	INCREASE_SIGN  shift 45
	DECREASE_SIGN  shift 46
	NOT_SIGN  shift 68
	'('  shift 69
	ID  shift 70
	.  error
